# J3RRY_ACCOUNT_BOOK

./: .gitignore  J3RRY_ACCOUNT_BOOK.sln  README.md  问题.md
J3RRY_ACCOUNT_BOOK/: ConnectDB.c  ConnectDB.h  J3RRY_ACCOUNT_BOOK.vcxproj  J3RRY_ACCOUNT_BOOK.vcxproj.filters  ProcessRecord.c  ProcessRecord.h  UserInteraction.c  db.db  db.sql  db_connect.c  db_connect.h  main.c  model.c  model.h  print.c  print.h  process_record.c  process_record.h  test.db  user_login.c  user_login.h  utilities.c  utilities.h  view.c  view.h  viewGUI.c  viewGUI.h  暂未实现的功能.c  暂未实现的功能.h
J3RRY_ACCOUNT_BOOK/include/sqlite/: shell.c  sqlite3.h
J3RRY_ACCOUNT_BOOK/src/: db_connect.c  db_connect.h  llist.c  llist.h  main.c  model.c  model.h  process_record.c  process_record.h
J3RRY_ACCOUNT_BOOK/src/test/: CMakeLists.txt  function_test.cpp
J3RRY_ACCOUNT_BOOK_TEST/: J3RRY_ACCOUNT_BOOK_TEST.vcxproj  db.sql  pch.h  test.cpp  test.db
sqlite/: sqlite.vcxproj  sqlite.vcxproj.filters
